# rust-doh-proxy

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: build.yml
files/: config.toml  doh-proxy.init
src/: config.rs  main.rs
src/cache/: lru.rs
src/dns/: mod.rs  parser.rs  response.rs  server.rs
src/status/: mod.rs
src/upstream/: doh.rs  doh3.rs  mod.rs  pool.rs
